--- a/index.html
+++ b/index.html
@@ -1,21 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Donuts Factory</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Donut Store</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .hero {
+            background: url('imgs/doughnuts-donuts.webp') no-repeat center center;
+            background-size: cover;
+            height: 500px;
+            color: white;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+
+        .hero h1 {
+            font-size: 4rem;
+        }
+
+        .hero p {
+            font-size: 1.5rem;
+        }
+
+        .donut-card img {
+            height: 200px;
+            object-fit: cover;
+        }
+    </style>
 </head>
+
 <body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Donut Store</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Menu</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
+    <!-- Hero Section -->
+    <div class="hero">
+        <h1>Welcome to Donut Store</h1>
+        <p>The best donuts in town!</p>
+        <a href="#" class="btn btn-primary btn-lg">Order Now</a>
+    </div>
 
+    <!-- Donuts Section -->
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card donut-card">
+                    <img src="imgs/51160200_glazed-doughnuts_1x1.webp" class="card-img-top" alt="Donut 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Glazed Donut</h5>
+                        <p class="card-text">A classic glazed donut.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card donut-card">
+                    <img src="imgs/images.jpeg" class="card-img-top" alt="Donut 2">
+                    <div class="card-body">
+                        <h5 class="card-title">Chocolate Donut</h5>
+                        <p class="card-text">A delicious chocolate glazed donut.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card donut-card">
+                    <img src="imgs/Baked-Funfetti-Donuts.webp" class="card-img-top" alt="Donut 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Sprinkled Donut</h5>
+                        <p class="card-text">A donut with colorful sprinkles.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <!-- Form section -->
+    <div class="container mt-5">
+    <form id="orderInfoForm">
+        <div class="mb-3">
+            <label for="userName" class="form-label">User Name</label>
+            <input type="text" class="form-control" id="userName">
+        </div>
+        <div class="mb-3">
+            <label for="age" class="form-label">Age</label>
+            <input type="text" class="form-control" id="age">
+        </div>
+        <div class="mb-3">
+            <label for="gender" class="form-label">Gender</label>
+            <input type="text" class="form-control" id="gender">
+        </div>
+        <div class="mb-3">
+            <label for="orderType" class="form-label">Order Type</label>
+            <input type="text" class="form-control" id="orderType">
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="drinkType" id="coldDrink">
+            <label class="form-check-label" for="coldDrink">
+                Cold Drink
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="drinkType" id="hotDrink" >
+            <label class="form-check-label" for="hotDrink">
+                Hot Drink
+            </label>
+        </div>
+        <br>
+        <button type="button" class="btn btn-primary" id="submitButton">Submit</button>
+    </form>
+    </div>
+    <div class="container mt-5" id = "orderInfo">
+        <!-- <ul id = "userInfo">
+            <li id="nameInfo"> User Name : </li>
+            <li id="ageInfo"> Age : </li>
+            <li id="genderInfo"> Gender : </li>
+            <li id="orderInfo"> User Name : </li>
+            <li id="drinkInfo"> Drink Type : </li>
+        </ul> -->
+        <p id ="dataToPresrent">
 
+        </p>
+    </div>
+
+    <!-- Footer -->
+    <footer class="bg-light text-center text-lg-start mt-5">
+        <div class="text-center p-3">
+            © 2024 Donut Store | All Rights Reserved
+        </div>
+    </footer>
+
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <!-- Js -->
     <script src="app.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
 </body>
+
 </html>
